--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="icon" href="./assets/images/Logo.ico" type="assets/images/logo.ico">
+    
+    
     <link rel="stylesheet" href="./assets/bootstrap/animate.css">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 
@@ -272,7 +273,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 ">
-          <img class="footer-img wow fadeInLeft" src="./assets/images/Logo Text.png" alt="Al Nasr">
+          <img class="footer-img wow fadeInLeft" src="assets/images/LogoText.png" alt="Al Nasr">
           <p class="img-text wow fadeInLeft">Comfortable and Quiet Worship, Our Service No. 1 in Indonesia</p>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-12 ">
